<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="true"
    android:fitsSystemWindows="true"
    android:orientation="vertical">


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@android:color/white"
        android:scrollbars="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingBottom="@dimen/customactivityoncrash_activity_vertical_margin"
            android:paddingLeft="@dimen/customactivityoncrash_activity_horizontal_margin"
            android:paddingRight="@dimen/customactivityoncrash_activity_horizontal_margin"
            android:paddingTop="@dimen/customactivityoncrash_activity_vertical_margin">

            <ImageView
                android:id="@+id/customactivityoncrash_error_activity_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:adjustViewBounds="true"
                android:contentDescription="@null"
                android:src="@drawable/customactivityoncrash_error_image" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:gravity="center"
                android:text="@string/customactivityoncrash_error_activity_error_occurred_explanation"
                android:textSize="18sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/theme_margin"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/customactivityoncrash_error_activity_more_info_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/theme_margin"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/customactivityoncrash_error_activity_error_details"

                    />


                <Button
                    android:id="@+id/customactivityoncrash_error_activity_restart_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/theme_margin"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="10dp"

                    android:text="@string/customactivityoncrash_error_activity_restart_app"
                    />
            </LinearLayout>


        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <View
        android:id="@+id/navigation_bar_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@android:color/transparent" />
</LinearLayout>